# f9.com

./: .gitignore  .gitmodules  README.md  package-lock.json  wasm_copy.sh
.github/workflows/: dockerimage.yml
deploy/docker-compose/: docker-compose.yml
projects/49view.com/: Dockerfile  package-lock.json  package.json
projects/49view.com-graphql-api/: httpserver.js  index.js  package-lock.json  package.json  websocketServer.js
projects/49view.com-graphql-api/graphql/: dataSources.js
projects/49view.com-graphql-api/graphql/datasources/: common.js  (+3 more)
projects/49view.com-graphql-api/models/: color.js  completed_upload.js  daemon_crash.js  entity.js  estate_agent.js  furniture_set.js  location.js  osm.js  property.js  property_bim.js  property_binary.js  shader.js  thumbnail_maker.js  upload.js
projects/49view.com/house_maker/: CMakeLists.txt  main.cpp
projects/49view.com/nginx-portal/: default.conf  nginx.conf
projects/49view.com/public/: index.html
projects/49view.com/src/: App.css  App.js  App.styled.js  index.js
projects/49view.com/wasm_renderer/: CMakeLists.txt  main.cpp
projects/house_explorer/: CMakeLists.txt  main.cpp
projects/house_explorer/sources/: house_explorer.cpp
projects/house_maker/: CMakeLists.txt
projects/house_maker/sources/: house_maker_gui.hpp  house_maker_statemachine.cpp  house_maker_statemachine.h  property_listing_orchestrator.hpp  selection_editor.hpp  transition_table_fsm.hpp
projects/map_explorer/: CMakeLists.txt  main.cpp
projects/map_explorer/sources/: map_explorer.cpp  map_explorer.h  transition_table_fsm.hpp
(+151 files in other folders)
